# mkdocs-embed_file-plugin

./: .gitignore  CHANGELOG.md  Pipfile  README.md  Taskfile.yml  clean.py  environment.yml  pyproject.toml  requirements.txt  semantic_release.toml  setup.cfg  setup.py  watch.py
.github/workflows/: python-publish.yml
docs/: embed_link.css
mkdocs_embed_file_plugins/: plugin.py
mkdocs_embed_file_plugins/src/: links_correction.py  search_quote.py  utils.py
