[project]
name = "mkdocs-embed-file-plugin"
version = "2.0.10"
description = "A plugin to quote file from docs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs",
    "setuptools",
    "Markdown",
    "beautifulsoup4",
    "python-frontmatter",
    "mdx-wikilink-plus",
    "mkdocs-callouts",
    "mkdocs-custom-tags-attributes",
    "pymdown-extensions",
]
authors = [
    { name = "Mara-Li", email = "mara-li@icloud.com" }
]
license = "AGPL"
readme = "README.md"
keywords = [
    "obsidian",
    "obsidian.md",
    "mkdocs",
    "file",
    "embed",
    "cite",
    "quote"
]
classifiers = [
    "Natural Language :: English",
    "Natural Language :: French",
    "Topic :: Text Processing :: Markup :: Markdown",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

[tool.ruff.lint]
select = ["PTH", "ANN", "N", "Q", "PL", "E", "F", "I"]
ignore = ["E501"]
exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[build-system]
requires = ["uv"]
build-backend = "uv.pyproject"

[project.urls]
homepage = "https://github.com/ObsidianPublisher/mkdocs-embed_file-plugin"

[project.entry-points."mkdocs.plugins"]
embed_file = "mkdocs_embed_file_plugins.plugin:EmbedFile"