[project]
name = "mkdocs-embed-file-plugin"
version = "2.1.1"
description = "A plugin to quote file from docs"
requires-python = ">=3.13"
dependencies = [
    "mkdocs",
    "setuptools",
    "Markdown",
    "beautifulsoup4",
    "python-frontmatter",
    "mdx-wikilink-plus",
    "mkdocs-callouts",
    "mkdocs-custom-tags-attributes",
    "pymdown-extensions",
    "ruamel-yaml"
]
authors = [
    { name = "Mara-Li", email = "mara-li@outlook.fr" }
]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = [
    "obsidian",
    "obsidian.md",
    "mkdocs",
    "file",
    "embed",
    "cite",
    "quote"
]
classifiers = [
    "Natural Language :: English",
    "Natural Language :: French",
    "Topic :: Text Processing :: Markup :: Markdown",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

[tool.ruff.lint]
select = ["PTH", "N", "Q", "PL", "E", "F", "I"]
ignore = ["E501", "ANN", "PLR"]
exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["mkdocs_embed_file_plugins"]

[project.urls]
homepage = "https://github.com/ObsidianPublisher/mkdocs-embed_file-plugin"

[project.entry-points."mkdocs.plugins"]
embed_file = "mkdocs_embed_file_plugins.plugin:EmbedFile"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "watchdog>=2.1.6",
    "python-semantic-release>=9.15.2",
    "build>=0.6.0",
    "rich>=13.9.4",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
username = "__token__"
password = { env = "UV_PUBLISH_TOKEN" }
default = true